mpf_complex addeD

--- a/algos/algos.vcxproj
+++ b/algos/algos.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{2BE8BE02-0300-4829-871F-1AA72A509DD6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>algos</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -150,6 +150,7 @@
     <ClInclude Include="algos.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Word.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="algos.cpp" />
