--- a/algos/algos.vcxproj.filters
+++ b/algos/algos.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="algos.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Word.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
